--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ node_modules
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31
 ignition/deployments/chain-30
+
+# Encrypted wallet files
+.wallets/
